--- a/Web.config
+++ b/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="connect" connectionString="Data Source=XD\SECURE_METER;Initial Catalog=Instagram;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="connect" connectionString="Data Source=GNARLYPHANTOM\SQLEXPRESS;Initial Catalog=Instagram;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5"/>
